@@ -407,6 +407,19 @@ static const canon_cap_t canon_model_capabilities[] =
     NULL,
     NULL
   },
+  { /* Canon BJC S800 */
+    "S800", 3,
+    842, 17*72,
+    11, 9, 10, 18,
+    &canon_BJC_S800_slotlist,
+    CANON_CAP_STD0|CANON_CAP_I|CANON_CAP_p,0,control_cmd_BJC_i6100,
+    &canon_BJC_S800_modelist,
+    &canon_BJC_S800_paperlist,
+    NULL,
+    NULL,
+    NULL,
+    NULL
+  },
   { /* Canon  BJ 30   *//* heads: BC-10 */
     "30", 1,
     9.5*72, 14*72,
